# brainfuck-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: BFInterpreter.bf  CalculateCellSize.bf  Cat.bf  HelloWorld.bf  Life.bf  MemoryEater.bf  Quine.bf  Random.bf
src/: code_gen.rs  instruction.rs  main.rs  optimizer.rs  parser.rs  tok.rs
stdlib/: helpers.c
