[package]
name = "brainfuck-rs"
version = "0.1.0"
authors = ["Josef Zoller"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
clap = { version = "4.1.1", features = ["derive"] }
path-absolutize = "3.0.14"
tempfile = "3.3.0"
libc = "0.2.139"
replace_with = "0.1.7"
either = "1.8.0"
